Fixed ChemIndex and Shipment add record

--- a/views/inventory/chemindex.html
+++ b/views/inventory/chemindex.html
@@ -1,4 +1,7 @@
 {{extend 'layout.html'}}
+              <table  width="100">
+                  <tr><td>{{=addbutton}}</td></tr>
+              </table>
 <script src="{{=URL('static','plugins/datatables/dataTables.bootstrap.min.js')}}"></script>
 <!-- DataTables -->
 <script src="{{=URL('static','plugins/datatables/jquery.dataTables.min.js')}}"></script>
