--- a/views/inventory/item.html
+++ b/views/inventory/item.html
@@ -1,5 +1,8 @@
 {{extend 'layout.html'}}
 
+              <table  width="100">
+                  <tr><td>{{=addbutton}}</td></tr>
+              </table>
 <!-- DataTables -->
 
 <script src="{{=URL('static','plugins/datatables/dataTables.bootstrap.min.js')}}"></script>
