--- a/views/default/index.html
+++ b/views/default/index.html
@@ -146,6 +146,9 @@ Chemical Waste Management Program
       
     </p>
     <p> <h3>Database Normalization</h3>
+<a href="{{=URL('static','dbgraph.pdf')}}">Database Entity Diagram</a>
+<br>
+
         There are two methods that break database normalization in this application. These are used to reduce the number and complexity of tables.<br>
         1. "Is in set" contraints - Instead of a reference field, a drop-down is displayed of possible values.<br>
         This is relatively safe, because the value is used instead of the foreign key.<br>
