Fixed all add buttons

--- a/views/inventory/container.html
+++ b/views/inventory/container.html
@@ -32,7 +32,7 @@ $(document).ready(function(){
         data:  {{=results}},
         columns: [
             { data: 'id' },
-            { data: 'ContNum' },
+            { data: 'contnum' },
             { data: 'PSN' },
             { data: 'OpenDate' },
             { data: 'CloseDate' },
