Fixed display values and lowercase all database tables and fields

--- a/views/help/help.html
+++ b/views/help/help.html
@@ -14,3 +14,15 @@
     8. Seed data is provided in tables, and the process of updating them is provided.
     
 </p>
+<p>
+    Manifest and Hazardous Waste Label Printing<br>
+
+</p>
+<p>
+    The system supports Dymo labelwriters. These are very inexpensive, reliable label printers, with support for dialog-less printing from a browser.<br>
+    Installing the Labelwriter software includes a listener on port 41951 – 41960<br>
+    The DYMO Label Framework JavaScript Library 2.0 uses this port to directly print to the lablewriter.<br>
+    See: http://developers.dymo.com/category/sdk-samples/<br>
+    It is formatted for: Address label 5 lines<br>
+    Includes header, item number, shelf number, chemical name, disposal code, hazards, accumulation date, and item number barcode 
+</p>
