--- a/views/inventory/chemindex.html
+++ b/views/inventory/chemindex.html
@@ -40,13 +40,13 @@ $(document).ready(function(){
         columns: [
             { data: 'id' },
             { data: 'chemname' },
-            { data: 'cgroup' },
-            { data: 'cstate' },
-            { data: 'cdisposalcode' },
+            { data: 'group' },
+            { data: 'state' },
+            { data: 'disposalcode' },
             { data: 'tsdf' },
             { data: 'treatment' },
-            { data: 'chazard' },
-            { data: 'chazwastecodes' },
+            { data: 'hazard' },
+            { data: 'hazwastecodes' },
             { data: 'editlink' },
         ]
     })
