--- a/views/inventory/chemindexedit.html
+++ b/views/inventory/chemindexedit.html
@@ -20,16 +20,16 @@
               </table>
               <table class="table">
                 <tr>
-                    <td><label>Group</label> {{=form.custom.widget.cgroup}}</td>
-                    <td><label>State</label> {{=form.custom.widget.cstate}}</td>
-                    <td><label>DOT PSN</label> <br>{{=form.custom.widget.cDOTPSN}}</td>
+                    <td><label>Group</label> {{=form.custom.widget.group}}</td>
+                    <td><label>State</label> {{=form.custom.widget.state}}</td>
+                    <td><label>DOT PSN</label> <br>{{=form.custom.widget.dotpsn}}</td>
                 </tr>
                 <tr>
-                    <td>    <div><label>Hazard</label>{{=form.custom.widget.chazard}}</div>  </td>
+                    <td>    <div><label>Hazard</label>{{=form.custom.widget.hazard}}</div>  </td>
                     <td><label>Reorder</label>
                      </td>
                   <td>
-                      <label>Pack Type</label>{{=form.custom.widget.cpacktype}}
+                      <label>Pack Type</label>{{=form.custom.widget.packtype}}
                   </td>
  <td>
      <label> Treatment</label>{{=form.custom.widget.treatment}}
