--- a/views/inventory/container.html
+++ b/views/inventory/container.html
@@ -33,11 +33,11 @@ $(document).ready(function(){
         columns: [
             { data: 'id' },
             { data: 'contnum' },
-            { data: 'PSN' },
-            { data: 'OpenDate' },
-            { data: 'CloseDate' },
-            { data: 'cdisposalcode' },
-            { data: 'cShipment' },
+            { data: 'psn' },
+            { data: 'opendate' },
+            { data: 'closedate' },
+            { data: 'disposalcode' },
+            { data: 'shipment' },
             { data: 'editlink' },
         ]
     })
