--- a/views/inventory/item.html
+++ b/views/inventory/item.html
@@ -38,11 +38,11 @@ $(document).ready(function(){
         data:  {{=results}},
         columns: [
             { data: 'id' },
-            { data: 'Iname' },
-            { data: 'Idisposalcode' },
-            { data: 'Ipounds' },
-            { data: 'Icontainer' },
-            { data: 'Ishelf' },
+            { data: 'name' },
+            { data: 'disposalcode' },
+            { data: 'pounds' },
+            { data: 'container' },
+            { data: 'shelf' },
             { data: 'editlink' },
         ]
     })
