--- a/views/inventory/shipment.html
+++ b/views/inventory/shipment.html
@@ -33,7 +33,7 @@ $(document).ready(function(){
         data:  {{=results}},
         columns: [
             { data: 'id' },
-            { data: 'Manifest' },
+            { data: 'manifest' },
             { data: 'editlink' },
         ]
     })
