--- a/views/inventory/shipmentedit.html
+++ b/views/inventory/shipmentedit.html
@@ -1,6 +1,6 @@
 {{extend 'layout.html'}}
  {{=form.custom.begin}}
 ID: <div>{{=form.custom.widget.id}}</div>
-Manifest: <div>{{=form.custom.widget.Manifest}}</div>
+Manifest: <div>{{=form.custom.widget.manifest}}</div>
       {{=form.custom.submit}}
                   {{=form.custom.end}}
