--- a/views/inventory/itemedit.html
+++ b/views/inventory/itemedit.html
@@ -2,9 +2,10 @@
 <!--Include DYMO.Label.Framework.js for label printing-->
 <script src="{{=URL('static','js/DYMO.Label.Framework.js')}}" type="text/javascript" charset="UTF-8"></script>
 <script src="{{=URL('static','js/PrintLabel.js')}}" type="text/javascript" charset="UTF-8"></script>
+<!--Include jquery-ui for draggable hazards and sortable-->
+<script src="{{=URL('static','plugins/jQueryUI/jquery-ui.js')}}"></script>
 
-
-<!--Include Select2 autocomplete-->
+<!--Include Select2 autocomplete for chmical name-->
 <link rel="stylesheet" href="{{=URL('static','css/select2.min.css')}}"/>
 <script src="{{=URL('static','js/select2.min.js')}}" type="text/javascript" charset="UTF-8"></script>
 
