fix menus and manifest process

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -69,7 +69,7 @@ Chemical Waste Management Program
 <ol>
   <li>{{=T('Tracks waste related data such as federal and state waste codes, treatment options, and inventories.')}}</li>
   <li>{{=T('Performs waste manifest tracking and reporting.')}}</li>
-  <li>{{=T('Generates the Uniform Hazardous Waste Manifest form.')}} <a href={{=URL('default','generate')}}>Example Manifest</a></li>
+  <li>{{=T('Generates the Uniform Hazardous Waste Manifest form.')}} <a href={{=URL('manifest','generate')}}>Example Manifest</a></li>
   <li>{{=T('Summarizes data for the Biennial Hazardous Waste Report.')}}</li>
 </ol>
 <div id="accordion">
