--- a/views/layout.html
+++ b/views/layout.html
@@ -152,16 +152,16 @@
             <li><a href={{=URL('inventory','shipment')}}><i class="fa fa-link"></i> <span>Shipment</span></a></li>
             <li><a href={{=URL('inventory','chemindex')}}><i class="fa fa-link"></i> <span>Chemical Index</span></a></li>
             <li><a href={{=URL('reports','index')}}><i class="fa fa-link"></i> <span>Reports</span></a></li>
-            <li class="treeview">
+            <!---<li class="treeview">
               <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
               <ul class="treeview-menu">
                 <li><a href="#">Link in level 2</a></li>
                 <li><a href="#">Link in level 2</a></li>
               </ul>
-            </li>
+            </li>-->
             <li class="header">Support Tables</li>
-            <li><a href={{=URL('inventory','shelf')}}><i class="fa fa-link"></i> <span>Shelf</span></a></li>
-            <li><a href={{=URL('inventory','cabinet')}}><i class="fa fa-link"></i> <span>Cabinet</span></a></li>
+            <li><a href={{=URL('metadata','shelf')}}><i class="fa fa-link"></i> <span>Shelf</span></a></li>
+            <li><a href={{=URL('metadata','cabinet')}}><i class="fa fa-link"></i> <span>Cabinet</span></a></li>
             </li>
           </ul><!-- /.sidebar-menu -->
         </section>
