--- a/views/inventory/itemedit.html
+++ b/views/inventory/itemedit.html
@@ -60,6 +60,10 @@ function () {
 
 <!-- Main content -->
 {{=form.custom.begin}}
+<!-- For Printing Labels -->
+<input type="hidden" name="item_id" id="item_id" value="{{=item_id}}">
+<input type="hidden" name="chemname" id="chemname" value="{{=chemname}}">
+
     <section class="content">
         <div class="row">
         <!-- general form elements -->
@@ -190,9 +194,8 @@ function () {
 
             
 
-            
-      <a id="printButton"  class="btn btn-default"><i class="fa fa-print"></i> Print Label</a>
-            
+                  
+     
             
 <div class=" pull-right"> {{=form.custom.submit}}</div>
         </div>
@@ -202,7 +205,7 @@ function () {
        
 {{=form.custom.end}}<!-- /.form -->    
 
-        <label for="textTextArea">Label text:</label><br/>
-        <textarea name="textTextArea" id="textTextArea"  rows='5' cols='40'>{{=labeltext}}</textarea>
+       
     </div>
             <!-- </form>-->
+<textarea name="textTextArea" id="textTextArea"  rows='5' cols='40'>{{=labeltext}}</textarea>
