--- a/views/layout.html
+++ b/views/layout.html
@@ -172,10 +172,18 @@
       <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <section class="content-header">
-          <h1>
-            {{=PageHeader}}
-            
-          </h1>
+                    <div class="col-xs-4 text-left">
+                        {{=PageHeader}}
+                    </div>
+                    <div class="col-xs-2 text-left">
+                        {{=topactionbutton1}}
+                    </div>
+                    <div class="col-xs-2 text-left">
+                        {{=topactionbutton2}}
+                    </div>
+                    <div class="col-xs-2 text-left">
+                        <div id="target1"></div>
+                  </div>
           <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
             <li class="active">Here</li>
