Abstracted cwp_functions, added shelve button

--- a/views/inventory/itemedit.html
+++ b/views/inventory/itemedit.html
@@ -5,7 +5,7 @@
 <!--Include jquery-ui for draggable hazards and sortable-->
 <script src="{{=URL('static','plugins/jQueryUI/jquery-ui.js')}}"></script>
 
-<!--Include Select2 autocomplete for chmical name-->
+<!--Include Select2 autocomplete for chemical name-->
 <link rel="stylesheet" href="{{=URL('static','css/select2.min.css')}}"/>
 <script src="{{=URL('static','js/select2.min.js')}}" type="text/javascript" charset="UTF-8"></script>
 
@@ -112,7 +112,7 @@ function () {
 
                         <div class="col-xs-6"><!-- two column --> 
                             <label>Shelf</label>
-                            <div>{{=form.custom.widget.Ishelf}}</div>
+                            <div>{{=form.custom.widget.shelf}}</div>
                         </div>
                         <div class="col-xs-6">
                             <label>Container</label>
@@ -208,4 +208,3 @@ function () {
        
     </div>
             <!-- </form>-->
-<textarea name="textTextArea" id="textTextArea"  rows='5' cols='40'>{{=labeltext}}</textarea>
